# django_htmx_solana_query

./: README.md  pyproject.toml
django/config/: settings.py
django/transactions/: urls.py  views.py
django/transactions/templates/: index.html  transactions.html
